@@ -1,8 +1,8 @@
 package com.connor.newsplatform.server.service.impl;
 
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
-import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.connor.newsplatform.common.constant.ArticleStatus;
 import com.connor.newsplatform.common.constant.CacheKeys;
+import com.connor.newsplatform.common.constant.JwtClaimsConstant;
 import com.connor.newsplatform.common.context.BaseContext;
 import com.connor.newsplatform.common.exception.BusinessException;
 import com.connor.newsplatform.common.result.PageResult;
@@ -11,18 +11,22 @@ import com.connor.newsplatform.pojo.entity.NewsCategory;
 import com.connor.newsplatform.pojo.vo.CategoryVO;
 import com.connor.newsplatform.server.mapper.NewsCategoryMapper;
 import com.connor.newsplatform.server.service.CategoryService;
+import org.springframework.beans.BeanUtils;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.util.StringUtils;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * 分类服务
+ */
 @Service
 public class CategoryServiceImpl implements CategoryService {
+
     private final NewsCategoryMapper categoryMapper;
     private final RedisTemplate<String, Object> redisTemplate;
 
@@ -31,51 +35,79 @@ public class CategoryServiceImpl implements CategoryService {
         this.redisTemplate = redisTemplate;
     }
 
+    /**
+     * 分页查询分类
+     */
     @Override
     public PageResult<CategoryVO> page(int page, int pageSize, String name, Integer status) {
-        Page<NewsCategory> result = categoryMapper.selectPage(Page.of(page, pageSize), new LambdaQueryWrapper<NewsCategory>()
-                .like(StringUtils.hasText(name), NewsCategory::getName, name)
-                .eq(status != null, NewsCategory::getStatus, status)
-                .orderByAsc(NewsCategory::getSort)
-                .orderByDesc(NewsCategory::getCreateTime));
-        return new PageResult<>(result.getTotal(), result.getRecords().stream()
-                .map(entity -> BeanCopy.to(entity, CategoryVO.class))
-                .toList());
+        com.github.pagehelper.PageHelper.startPage(page, pageSize);
+        com.github.pagehelper.Page<NewsCategory> p = categoryMapper.pageQuery(name, status);
+        List<CategoryVO> list = p.getResult().stream()
+                .map(entity -> {
+                    CategoryVO vo = new CategoryVO();
+                    BeanUtils.copyProperties(entity, vo);
+                    return vo;
+                })
+                .collect(Collectors.toList());
+        return new PageResult<>(p.getTotal(), list);
     }
 
+    /**
+     * 新增分类
+     */
     @Override
     @Transactional
     public void create(CategoryDTO dto) {
-        ensureNameUnique(dto.getName(), null);
-        NewsCategory category = BeanCopy.to(dto, NewsCategory.class);
+        // 1. 检查分类名称是否已存在
+        Long count = categoryMapper.countByName(dto.getName(), null);
+        if (count > 0) {
+            throw new BusinessException("分类名称已存在");
+        }
+        // 2. 新增
+        NewsCategory category = new NewsCategory();
+        BeanUtils.copyProperties(dto, category);
         category.setCreateTime(LocalDateTime.now());
         category.setUpdateTime(LocalDateTime.now());
         category.setCreateUser(BaseContext.getCurrentId());
         category.setUpdateUser(BaseContext.getCurrentId());
         categoryMapper.insert(category);
-        clearCache();
+        // 3. 清除缓存
+        redisTemplate.delete(CacheKeys.CATEGORY_LIST);
     }
 
+    /**
+     * 修改分类
+     */
     @Override
     @Transactional
     public void update(CategoryDTO dto) {
         if (dto.getId() == null) {
             throw new BusinessException("分类ID不能为空");
         }
-        ensureNameUnique(dto.getName(), dto.getId());
-        NewsCategory category = BeanCopy.to(dto, NewsCategory.class);
+        Long count = categoryMapper.countByName(dto.getName(), dto.getId());
+        if (count > 0) {
+            throw new BusinessException("分类名称已存在");
+        }
+        NewsCategory category = new NewsCategory();
+        BeanUtils.copyProperties(dto, category);
         category.setUpdateTime(LocalDateTime.now());
         category.setUpdateUser(BaseContext.getCurrentId());
-        categoryMapper.updateById(category);
-        clearCache();
+        categoryMapper.update(category);
+        redisTemplate.delete(CacheKeys.CATEGORY_LIST);
     }
 
+    /**
+     * 删除分类
+     */
     @Override
     public void delete(Long id) {
         categoryMapper.deleteById(id);
-        clearCache();
+        redisTemplate.delete(CacheKeys.CATEGORY_LIST);
     }
 
+    /**
+     * 启用禁用分类
+     */
     @Override
     public void updateStatus(Long id, Integer status) {
         NewsCategory category = new NewsCategory();
@@ -83,46 +115,32 @@ public class CategoryServiceImpl implements CategoryService {
         category.setStatus(status);
         category.setUpdateTime(LocalDateTime.now());
         category.setUpdateUser(BaseContext.getCurrentId());
-        categoryMapper.updateById(category);
-        clearCache();
-    }
-
-    @Override
-    @SuppressWarnings("unchecked")
-    public List<CategoryVO> enabledList() {
-        Object cached = getCachedValue(CacheKeys.CATEGORY_LIST);
-        if (cached instanceof List<?> list) {
-            return (List<CategoryVO>) list;
-        }
-        List<CategoryVO> categories = new ArrayList<>(categoryMapper.selectList(new LambdaQueryWrapper<NewsCategory>()
-                        .eq(NewsCategory::getStatus, 1)
-                        .orderByAsc(NewsCategory::getSort))
-                .stream()
-                .map(entity -> BeanCopy.to(entity, CategoryVO.class))
-                .toList());
-        redisTemplate.opsForValue().set(CacheKeys.CATEGORY_LIST, categories, Duration.ofHours(24));
-        return categories;
-    }
-
-    private void ensureNameUnique(String name, Long currentId) {
-        Long count = categoryMapper.selectCount(new LambdaQueryWrapper<NewsCategory>()
-                .eq(NewsCategory::getName, name)
-                .ne(currentId != null, NewsCategory::getId, currentId));
-        if (count > 0) {
-            throw new BusinessException("分类名称已存在");
-        }
-    }
-
-    private void clearCache() {
+        categoryMapper.update(category);
         redisTemplate.delete(CacheKeys.CATEGORY_LIST);
     }
 
-    private Object getCachedValue(String key) {
-        try {
-            return redisTemplate.opsForValue().get(key);
-        } catch (RuntimeException ex) {
-            redisTemplate.delete(key);
-            return null;
+    /**
+     * 查询启用的分类列表（带缓存）
+     */
+    @Override
+    @SuppressWarnings("unchecked")
+    public List<CategoryVO> enabledList() {
+        // 1. 先查缓存
+        Object cached = redisTemplate.opsForValue().get(CacheKeys.CATEGORY_LIST);
+        if (cached instanceof List<?> list) {
+            return (List<CategoryVO>) list;
         }
+        // 2. 查数据库
+        List<NewsCategory> categories = categoryMapper.selectEnabledList();
+        List<CategoryVO> list = categories.stream()
+                .map(entity -> {
+                    CategoryVO vo = new CategoryVO();
+                    BeanUtils.copyProperties(entity, vo);
+                    return vo;
+                })
+                .collect(Collectors.toList());
+        // 3. 写入缓存
+        redisTemplate.opsForValue().set(CacheKeys.CATEGORY_LIST, list, Duration.ofHours(24));
+        return list;
     }
 }
