@@ -1,15 +1,11 @@
 package com.connor.newsplatform.server.service.impl;
 
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
-import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.connor.newsplatform.common.constant.ArticleStatus;
 import com.connor.newsplatform.common.constant.CacheKeys;
 import com.connor.newsplatform.common.result.PageResult;
 import com.connor.newsplatform.pojo.entity.NewsArticle;
-import com.connor.newsplatform.pojo.entity.NewsAuditRecord;
 import com.connor.newsplatform.pojo.entity.NewsCategory;
 import com.connor.newsplatform.pojo.entity.NewsDailyStats;
-import com.connor.newsplatform.pojo.entity.NewsReadRecord;
 import com.connor.newsplatform.pojo.entity.SysOperationLog;
 import com.connor.newsplatform.pojo.vo.ArticleVO;
 import com.connor.newsplatform.pojo.vo.CategoryDistributionVO;
@@ -23,10 +19,11 @@ import com.connor.newsplatform.server.mapper.NewsReadRecordMapper;
 import com.connor.newsplatform.server.mapper.SysOperationLogMapper;
 import com.connor.newsplatform.server.service.ArticleService;
 import com.connor.newsplatform.server.service.StatisticsService;
+import com.github.pagehelper.PageHelper;
+import com.github.pagehelper.Page;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.util.StringUtils;
 
 import java.time.Duration;
 import java.time.LocalDate;
@@ -38,8 +35,12 @@ import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+/**
+ * 统计服务
+ */
 @Service
 public class StatisticsServiceImpl implements StatisticsService {
+
     private final NewsArticleMapper articleMapper;
     private final NewsAuditRecordMapper auditRecordMapper;
     private final NewsReadRecordMapper readRecordMapper;
@@ -67,108 +68,131 @@ public class StatisticsServiceImpl implements StatisticsService {
         this.redisTemplate = redisTemplate;
     }
 
+    /**
+     * 今日数据看板
+     */
     @Override
     public DashboardTodayVO today() {
-        Object cached = getCachedValue(CacheKeys.DASHBOARD_TODAY);
+        // 1. 查缓存
+        Object cached = redisTemplate.opsForValue().get(CacheKeys.DASHBOARD_TODAY);
         if (cached instanceof DashboardTodayVO vo) {
             return vo;
         }
+        // 2. 查数据库
         LocalDate today = LocalDate.now();
         LocalDateTime begin = today.atStartOfDay();
         LocalDateTime end = today.atTime(LocalTime.MAX);
+
         DashboardTodayVO vo = new DashboardTodayVO();
-        vo.setPublishCount(articleMapper.selectCount(new LambdaQueryWrapper<NewsArticle>()
-                .eq(NewsArticle::getStatus, ArticleStatus.PUBLISHED)
-                .between(NewsArticle::getPublishTime, begin, end)).intValue());
-        vo.setViewCount(readRecordMapper.selectCount(new LambdaQueryWrapper<NewsReadRecord>()
-                .between(NewsReadRecord::getCreateTime, begin, end)));
-        vo.setAuditCount(auditRecordMapper.selectCount(new LambdaQueryWrapper<NewsAuditRecord>()
-                .between(NewsAuditRecord::getCreateTime, begin, end)).intValue());
-        vo.setRejectCount(auditRecordMapper.selectCount(new LambdaQueryWrapper<NewsAuditRecord>()
-                .eq(NewsAuditRecord::getAuditStatus, ArticleStatus.REJECTED)
-                .between(NewsAuditRecord::getCreateTime, begin, end)).intValue());
+        vo.setPublishCount(articleMapper.countByStatusAndPublishTime(ArticleStatus.PUBLISHED, begin, end));
+        vo.setViewCount(readRecordMapper.countByDateRange(begin, end));
+        vo.setAuditCount(auditRecordMapper.countByDateRange(begin, end));
+        vo.setRejectCount(auditRecordMapper.countRejectedByDateRange(begin, end));
+
+        // 3. 写缓存
         redisTemplate.opsForValue().set(CacheKeys.DASHBOARD_TODAY, vo, Duration.ofMinutes(5));
         return vo;
     }
 
+    /**
+     * 阅读趋势
+     */
     @Override
     public List<TrendVO> readTrend(LocalDate begin, LocalDate end) {
         return statsBetween(begin, end).stream()
                 .map(stats -> new TrendVO(stats.getStatDate().toString(), stats.getViewCount()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    /**
+     * 发布趋势
+     */
     @Override
     public List<TrendVO> publishTrend(LocalDate begin, LocalDate end) {
         return statsBetween(begin, end).stream()
                 .map(stats -> new TrendVO(stats.getStatDate().toString(), stats.getPublishCount().longValue()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    /**
+     * 热点top10
+     */
     @Override
     public List<ArticleVO> hotTop10() {
         return articleService.hotList("hot");
     }
 
+    /**
+     * 分类分布
+     */
     @Override
     public List<CategoryDistributionVO> categoryDistribution() {
-        List<NewsArticle> articles = articleMapper.selectList(new LambdaQueryWrapper<NewsArticle>()
-                .eq(NewsArticle::getStatus, ArticleStatus.PUBLISHED));
+        // 1. 查询所有已发布文章
+        List<NewsArticle> articles = articleMapper.selectAllPublished();
+        // 2. 按分类分组计数
         Map<Long, Long> countMap = articles.stream()
                 .collect(Collectors.groupingBy(NewsArticle::getCategoryId, Collectors.counting()));
-        Map<Long, NewsCategory> categoryMap = categoryMapper.selectBatchIds(countMap.keySet())
-                .stream()
+        // 3. 查询分类名称
+        List<NewsCategory> categories = categoryMapper.selectByIds(new ArrayList<>(countMap.keySet()));
+        Map<Long, NewsCategory> categoryMap = categories.stream()
                 .collect(Collectors.toMap(NewsCategory::getId, Function.identity()));
+        // 4. 组装结果
         return countMap.entrySet().stream()
                 .map(entry -> new CategoryDistributionVO(
                         entry.getKey(),
-                        categoryMap.containsKey(entry.getKey()) ? categoryMap.get(entry.getKey()).getName() : "未分类",
+                        categoryMap.containsKey(entry.getKey())
+                                ? categoryMap.get(entry.getKey()).getName() : "未分类",
                         entry.getValue()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    /**
+     * 操作日志分页
+     */
     @Override
-    public PageResult<SysOperationLog> logPage(int page, int pageSize, String operation, LocalDateTime beginTime, LocalDateTime endTime) {
-        Page<SysOperationLog> result = logMapper.selectPage(Page.of(page, pageSize), new LambdaQueryWrapper<SysOperationLog>()
-                .like(StringUtils.hasText(operation), SysOperationLog::getOperation, operation)
-                .ge(beginTime != null, SysOperationLog::getCreateTime, beginTime)
-                .le(endTime != null, SysOperationLog::getCreateTime, endTime)
-                .orderByDesc(SysOperationLog::getCreateTime));
-        return new PageResult<>(result.getTotal(), result.getRecords());
+    public PageResult<SysOperationLog> logPage(int page, int pageSize, String operation,
+                                                LocalDateTime beginTime, LocalDateTime endTime) {
+        PageHelper.startPage(page, pageSize);
+        Page<SysOperationLog> p = logMapper.pageQuery(operation, beginTime, endTime);
+        return new PageResult<>(p.getTotal(), p.getResult());
     }
 
+    /**
+     * 生成每日统计（定时任务调用）
+     */
     @Override
     @Transactional
     public void generateDailyStats(LocalDate date) {
         LocalDateTime begin = date.atStartOfDay();
         LocalDateTime end = date.atTime(LocalTime.MAX);
-        dailyStatsMapper.delete(new LambdaQueryWrapper<NewsDailyStats>().eq(NewsDailyStats::getStatDate, date));
+
+        // 先删除旧数据
+        dailyStatsMapper.deleteByDate(date);
+
+        // 查询并统计
         NewsDailyStats stats = new NewsDailyStats();
         stats.setStatDate(date);
-        stats.setArticleCount(articleMapper.selectCount(new LambdaQueryWrapper<NewsArticle>()
-                .between(NewsArticle::getCreateTime, begin, end)).intValue());
-        stats.setPublishCount(articleMapper.selectCount(new LambdaQueryWrapper<NewsArticle>()
-                .eq(NewsArticle::getStatus, ArticleStatus.PUBLISHED)
-                .between(NewsArticle::getPublishTime, begin, end)).intValue());
-        stats.setViewCount(readRecordMapper.selectCount(new LambdaQueryWrapper<NewsReadRecord>()
-                .between(NewsReadRecord::getCreateTime, begin, end)));
-        stats.setAuditCount(auditRecordMapper.selectCount(new LambdaQueryWrapper<NewsAuditRecord>()
-                .between(NewsAuditRecord::getCreateTime, begin, end)).intValue());
-        stats.setRejectCount(auditRecordMapper.selectCount(new LambdaQueryWrapper<NewsAuditRecord>()
-                .eq(NewsAuditRecord::getAuditStatus, ArticleStatus.REJECTED)
-                .between(NewsAuditRecord::getCreateTime, begin, end)).intValue());
+        stats.setArticleCount(articleMapper.countByCreateTime(begin, end));
+        stats.setPublishCount(articleMapper.countByStatusAndPublishTime(ArticleStatus.PUBLISHED, begin, end));
+        stats.setViewCount(readRecordMapper.countByDateRange(begin, end));
+        stats.setAuditCount(auditRecordMapper.countByDateRange(begin, end));
+        stats.setRejectCount(auditRecordMapper.countRejectedByDateRange(begin, end));
         stats.setCreateTime(LocalDateTime.now());
+
         dailyStatsMapper.insert(stats);
     }
 
+    /**
+     * 查询日期范围内的统计，缺失日期补0
+     */
     private List<NewsDailyStats> statsBetween(LocalDate begin, LocalDate end) {
         LocalDate safeEnd = end == null ? LocalDate.now() : end;
         LocalDate safeBegin = begin == null ? safeEnd.minusDays(6) : begin;
-        List<NewsDailyStats> existing = dailyStatsMapper.selectList(new LambdaQueryWrapper<NewsDailyStats>()
-                .between(NewsDailyStats::getStatDate, safeBegin, safeEnd)
-                .orderByAsc(NewsDailyStats::getStatDate));
+
+        List<NewsDailyStats> existing = dailyStatsMapper.selectByDateRange(safeBegin, safeEnd);
         Map<LocalDate, NewsDailyStats> map = existing.stream()
                 .collect(Collectors.toMap(NewsDailyStats::getStatDate, Function.identity()));
+
         List<NewsDailyStats> result = new ArrayList<>();
         for (LocalDate cursor = safeBegin; !cursor.isAfter(safeEnd); cursor = cursor.plusDays(1)) {
             result.add(map.getOrDefault(cursor, emptyStats(cursor)));
@@ -185,14 +209,5 @@ public class StatisticsServiceImpl implements StatisticsService {
         stats.setAuditCount(0);
         stats.setRejectCount(0);
         return stats;
-    }
-
-    private Object getCachedValue(String key) {
-        try {
-            return redisTemplate.opsForValue().get(key);
-        } catch (RuntimeException ex) {
-            redisTemplate.delete(key);
-            return null;
-        }
     }
 }
